13th commit: 1. redesign appointment part 2. redesign query logic, do not query by xName anymore.
TODO:
1. beatify the UI
2. data validation as TA asked

--- a/src/ui/doctor/DoctorRegisterFrame.form
+++ b/src/ui/doctor/DoctorRegisterFrame.form
@@ -502,7 +502,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbbHospitalActionPerformed"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="hospitalList.forEach(o -&gt; {&#xa;    cbbHospital.addItem(o.gethName());&#xa;});"/>
+            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="hospitalList.forEach(o -&gt; {&#xa;    cbbHospital.addItem(o.toString());&#xa;});"/>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
