--- a/src/ui/doctor/DoctorMainFrame.form
+++ b/src/ui/doctor/DoctorMainFrame.form
@@ -131,6 +131,9 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblLogout">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Helvetica Neue" size="13" style="1"/>
+                </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
