--- a/src/ui/LoginFrame.form
+++ b/src/ui/LoginFrame.form
@@ -82,7 +82,7 @@
     <Component class="javax.swing.JButton" name="btnRegister">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/assets/login.png"/>
+          <Image iconType="3" name="/assets/registration.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Register"/>
       </Properties>
@@ -93,7 +93,7 @@
     <Component class="javax.swing.JButton" name="btnLogin">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/assets/add.png"/>
+          <Image iconType="3" name="/assets/login.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Lgoin"/>
       </Properties>
